--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/fitness-icon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>FitLife Pro - Your Personal Fitness Companion</title>
+    <meta name="description" content="Transform your fitness journey with AI-powered workout tracking, nutrition planning, and personalized health insights.">
   </head>
   <body>
     <div id="root"></div>
